--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:waveshare_rp2040_zero]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = waveshare_rp2040_zero
 framework = arduino
+board_build.core = earlephilhower
+
+lib_deps = 
+    https://github.com/adafruit/Adafruit_Protomatter.git
+    https://github.com/arduino-libraries/Ethernet.git
+
