feat: websocket connection to browser-based timers

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,13 @@ board = waveshare_rp2040_zero
 framework = arduino
 board_build.core = earlephilhower
 
+build_flags = 
+    -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
+
 lib_deps = 
     https://github.com/adafruit/Adafruit_Protomatter.git
     https://github.com/arduino-libraries/Ethernet.git
     https://github.com/TrippyLighting/EthernetBonjour.git
+    links2004/WebSockets@^2.6.1
+    bblanchon/ArduinoJson@^7.2.0
 
