feat: Update RGB matrix pin definitions for RP2040-Shim, add a minimal test function, reorder WebServer includes, and remove a custom font.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:waveshare_rp2040_zero]
+[env:pico]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
-board = waveshare_rp2040_zero
+board = pico
 framework = arduino
 board_build.core = earlephilhower
 
 build_flags = 
     -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
+    -D PIN_SPI_SS_DEFAULT=21 ; Default CS (D10) - will override in code to 24
 
 lib_deps = 
     https://github.com/adafruit/Adafruit_Protomatter.git
