fix: Correct matrix pinout in docs and code, update SPI CS, and add raw GPIO toggle for wiring diagnosis.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ board_build.core = earlephilhower
 
 build_flags = 
     -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
-    -D PIN_SPI_SS_DEFAULT=21 ; Default CS (D10) - will override in code to 24
+    -D PIN_SPI_SS_DEFAULT=24 ; Default CS (D24) - matches hardware rewiring
 
 lib_deps = 
     https://github.com/adafruit/Adafruit_Protomatter.git
