--- a/platformio.ini
+++ b/platformio.ini
@@ -13,15 +13,29 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
+board_build.filesystem = littlefs
 
 build_flags = 
-    -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
-    -D PIN_SPI_SS_DEFAULT=24 ; Default CS (D24) - matches hardware rewiring
+    -D GPIO_COUNT=30
+    -D ADK_RP2040
+    -D ARDUINO_ARCH_RP2040
+    ; Ethernet_Generic SPI1 configuration
+    -D ETHERNET_USE_RPIPICO=true
+    -D USING_SPI2=true
+    -D SS_PIN_DEFAULT=21
+    ; Override SPI1 pins to match RP2040-Shim + POE-FeatherWing
+    -D PIN_SPI1_SCK=10
+    -D PIN_SPI1_MOSI=11
+    -D PIN_SPI1_MISO=12
+    -D PIN_SPI1_SS=21
+
 
 lib_deps = 
-    https://github.com/adafruit/Adafruit_Protomatter.git
-    https://github.com/arduino-libraries/Ethernet.git
-    https://github.com/TrippyLighting/EthernetBonjour.git
-    links2004/WebSockets@^2.6.1
-    bblanchon/ArduinoJson@^7.2.0
-
+    khoih-prog/Ethernet_Generic@^2.8.1
+;    sstaub/Ethernet3@^1.5.1
+    ;https://github.com/arduino-libraries/Ethernet.git
+;    https://github.com/TrippyLighting/EthernetBonjour.git
+;    links2004/WebSockets@^2.6.1
+;    bblanchon/ArduinoJson@^7.2.0
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/Adafruit Protomatter@^1.7.0
