feat: Implement WebServer and TimerDisplay features, and add EthernetBonjour and WebSockets library dependencies.

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ build_flags =
     -D ETHERNET_USE_RPIPICO=true
     -D USING_SPI2=true
     -D SS_PIN_DEFAULT=21
+    -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
     ; Override SPI1 pins to match RP2040-Shim + POE-FeatherWing
     -D PIN_SPI1_SCK=10
     -D PIN_SPI1_MOSI=11
@@ -34,8 +35,8 @@ lib_deps =
     khoih-prog/Ethernet_Generic@^2.8.1
 ;    sstaub/Ethernet3@^1.5.1
     ;https://github.com/arduino-libraries/Ethernet.git
-;    https://github.com/TrippyLighting/EthernetBonjour.git
-;    links2004/WebSockets@^2.6.1
-;    bblanchon/ArduinoJson@^7.2.0
+    ; https://github.com/TrippyLighting/EthernetBonjour.git (Replaced by local lib)
+    ; links2004/WebSockets@^2.6.1 (Replaced by local lib)
+    bblanchon/ArduinoJson@^7.2.0
     adafruit/Adafruit GFX Library@^1.11.9
     adafruit/Adafruit Protomatter@^1.7.0
