feat: Implement persistent storage for timer display settings including duration, color thresholds, font, and letter spacing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = pico
 framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem = littlefs
+board_build.filesystem_size = 1M
 
 build_flags = 
     -D GPIO_COUNT=30
@@ -23,7 +24,7 @@ build_flags =
     -D ETHERNET_USE_RPIPICO=true
     -D USING_SPI2=true
     -D SS_PIN_DEFAULT=21
-    -D WEBSOCKETS_NETWORK_TYPE=NETWORK_W5100
+    -D WEBSOCKETS_NETWORK_TYPE=2
     ; Override SPI1 pins to match RP2040-Shim + POE-FeatherWing
     -D PIN_SPI1_SCK=10
     -D PIN_SPI1_MOSI=11
